manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: get-tasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: get-tasks
  template:
    metadata:
      labels:
        app: get-tasks
    spec:
      containers:
      - name: get-tasks
        image: todoacr01.azurecr.io/gettask:v1
        ports:
        - containerPort: 8000
